--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -41,3 +41,15 @@ a:hover .header-profile-image {
 .has-error .help-inline.error-text {
   display: inline;
 }
+
+.top-margin-25{
+	margin-top: 25px;
+}
+.top-padding-25{
+	padding-top: 25px;
+}
+
+.ng-invalid {
+	border-color: red;
+	border-color: rgba(255, 0, 0, 0.63)
+}
