--- a/modules/recipes/client/views/recipes.client.landing.html
+++ b/modules/recipes/client/views/recipes.client.landing.html
@@ -1,20 +1,63 @@
-<section class="container">
-  <br>
+<section class="container search">
   <!---- Search for recipes ------>
-  <form class="col-xs-12 col-md-offset-4 col-md-4" ng-submit="vm.search();">
+  <form name="search" style="margin-top:20px;height:300px" class="col-xs-12 col-md-offset-4 col-md-4">
     <fieldset class="row">
       <div class="input-group">
-        <input autocomplete="off" id="messageText" name="messageText" class="form-control" ng-model="vm.messageText" placeholder="search" autofocus>
+        <input autocomplete="off" id="searchText" name="searchText" class="form-control"
+               ng-model="vm.searchText" placeholder="search" autofocus>
         <span class="input-group-btn">
-          <button class="btn btn-primary" ng-disabled="!vm.messageText.length">Search</button>
+          <button class="btn btn-primary" ng-click="vm.search();">Search</button>
         </span>
       </div>
     </fieldset>
   </form>
-
   <!--- Results ---->
-  <div class="row" style="margin-top:50px;text-align:center">
-    {{vm.messageText}}
+  <div class="row col-xs-12" style="margin-top:50px;text-align:center">
+    <div ui-grid="{ data: vm.data }" class="myGrid"></div>
+    data: {{vm.data}}
+    searchRes: {{vm.searchResults}}
   </div>
+</section>
+
+<section class="container new" style="margin-top:50px">
+  <!---- New ------>
+  <form class="col-xs-12" name="new" ng-submit="vm.insert();">
+
+    <h2>Create new...</h2>
+
+    <div class="row">
+      <div class="col-xs-4">
+        <label>Flavour</label>
+        <input autocomplete="off" id="flavour" name="flavour" class="form-control"
+               ng-model="vm.flavour" placeholder="protein flavour" autofocus required="true">
+      </div>
+      <div class="col-xs-4">
+        <label>Name</label>
+        <input autocomplete="off" id="description" name="description" class="form-control"
+               ng-model="vm.description" placeholder="(Optional)" autofocus>
+      </div>
+      <div class="col-xs-4">
+        <label>Type</label>
+        <input autocomplete="off" id="type" name="type" class="form-control"
+               ng-model="vm.type" placeholder="(Optional)" autofocus>
+      </div>
+    </div>
+    <div class="row top-margin-25">
+      <div class="col-xs-4">
+        <label>Calories</label>
+        <input autocomplete="off" id="calories" name="calories" class="form-control"
+               ng-model="vm.calories" placeholder="(Optional)" autofocus>
+      </div>
+      <div class="col-xs-4">
+        <label>Ingredients</label>
+        <input autocomplete="off" id="ingredients" name="ingredients" class="form-control"
+               ng-model="vm.ingredients" placeholder="(Optional)" autofocus>
+      </div>
+    </div>
+
+      <span class="input-group-btn top-padding-25">
+          <button class="btn btn-primary" ng-disabled="new.$invalid">Create</button>
+        </span>
+  </form>
 
 </section>
