Change recipe find to actually search by parameter.  Changed server and client code

--- a/modules/recipes/client/views/recipes.client.landing.html
+++ b/modules/recipes/client/views/recipes.client.landing.html
@@ -13,7 +13,7 @@
   </form>
   <!--- Results ---->
   <div class="row col-xs-12" style="margin-top:50px;text-align:center">
-    <div ui-grid="vm.resultsGrid" class="myGrid"></div>
+    <div ui-grid="vm.resultsGrid" ui-grid-selection class="myGrid"></div>
   </div>
 </section>
 
