Add "Manage Recipes" Admin sub-tab and create "add" page

--- a/modules/recipes/client/views/recipes.add.html
+++ b/modules/recipes/client/views/recipes.add.html
@@ -27,8 +27,8 @@
         <input autocomplete="off" id="calories" name="calories" class="form-control"
                ng-model="vm.calories" placeholder="(Optional)" autofocus>
       </div>
-      <div class="col-xs-4">
-        <label>Ingredients</label>
+      <div class="col-xs-8">
+        <label>Ingredients</label>(Separate by comma)
         <input autocomplete="off" id="ingredients" name="ingredients" class="form-control"
                ng-model="vm.ingredients" placeholder="(Optional)" autofocus>
       </div>
