--- a/modules/recipes/client/views/recipes.details.html
+++ b/modules/recipes/client/views/recipes.details.html
@@ -1,5 +1,17 @@
-<h2> TESTING </h2>
-<button class="pull-right" ng-click="$back()">BACK</button>
-{{ vm.details }}
+<h2> {{ vm.details.name }} </h2>
 
+<div class="row">
+  <div class="col-xs-4">
+    <label>Main Protein</label>{{ vm.details.flavour }}
+  </div>
+  <div class="col-xs-4">
+    <label>Calories</label>{{ vm.details.calories }}
+  </div>
+  <div class="col-xs-4">
+    <label>Ingredients</label>{{ vm.details.ingredients}}
+  </div>
+</div>
+
+
+<button class="pull-right" ng-click="$back()">BACK</button>
 
