Add "Edit Recipes" Admin sub-tab and create "edit" page, and some tweaks on "Add" page

--- a/modules/recipes/client/views/recipes.add.html
+++ b/modules/recipes/client/views/recipes.add.html
@@ -8,29 +8,29 @@
       <div class="col-xs-4">
         <label>Flavour</label>
         <input autocomplete="off" id="flavour" name="flavour" class="form-control"
-               ng-model="vm.flavour" placeholder="protein flavour" autofocus required="true">
+               ng-model="form.flavour" placeholder="protein flavour" autofocus required="true">
       </div>
       <div class="col-xs-4">
         <label>Name</label>
         <input autocomplete="off" id="description" name="description" class="form-control"
-               ng-model="vm.name" placeholder="(Optional)" autofocus>
+               ng-model="form.name" placeholder="(Optional)" autofocus>
       </div>
       <div class="col-xs-4">
         <label>Type</label>
         <input autocomplete="off" id="type" name="type" class="form-control"
-               ng-model="vm.type" placeholder="(Optional)" autofocus>
+               ng-model="form.type" placeholder="(Optional)" autofocus>
       </div>
     </div>
     <div class="row top-margin-25">
       <div class="col-xs-4">
         <label>Calories</label>
         <input autocomplete="off" id="calories" name="calories" class="form-control"
-               ng-model="vm.calories" placeholder="(Optional)" autofocus>
+               ng-model="form.calories" placeholder="(Optional)" autofocus>
       </div>
       <div class="col-xs-8">
         <label>Ingredients</label>(Separate by comma)
         <input autocomplete="off" id="ingredients" name="ingredients" class="form-control"
-               ng-model="vm.ingredients" placeholder="(Optional)" autofocus>
+               ng-model="form.ingredients" placeholder="(Optional)" autofocus>
       </div>
     </div>
 
