Fix "ingredients" functionality by making it an actual array

--- a/modules/recipes/client/css/recipes.css
+++ b/modules/recipes/client/css/recipes.css
@@ -8,3 +8,11 @@ label::after {
 	content: ":";
 	margin-right:25px;
 }
+
+div.ingredients-div {
+	display: inline-block;
+	vertical-align: top;
+}
+div.ingredients-div p {
+	margin-bottom: 0px;
+}
