--- a/modules/recipes/client/views/recipes.listing.html
+++ b/modules/recipes/client/views/recipes.listing.html
@@ -17,6 +17,8 @@
       </div>
     </fieldset>
   </form>
+
+  <button class="btn btn-primary" ng-click="vm.seed();">SEED</button>
   <!--- Results ---->
   <div class="row col-xs-12" style="margin-top:50px;text-align:center">
     <div ui-grid="vm.resultsGrid" ui-grid-selection class="myGrid"></div>
