Fix UI GRID dependency

--- a/modules/recipes/client/views/recipes.listing.html
+++ b/modules/recipes/client/views/recipes.listing.html
@@ -18,7 +18,7 @@
     </fieldset>
   </form>
 
-  <button class="btn btn-primary" ng-click="vm.seed();">SEED</button>
+  <!--<button class="btn btn-primary" ng-click="vm.seed();">SEED</button>-->
   <!--- Results ---->
   <div class="row col-xs-12" style="margin-top:50px;text-align:center">
     <div ui-grid="vm.resultsGrid" ui-grid-selection class="myGrid"></div>
