Re-adds details page

--- a/modules/recipes/client/views/recipes.details.html
+++ b/modules/recipes/client/views/recipes.details.html
@@ -5,7 +5,7 @@
     <label>Main Protein</label>{{ vm.details.flavour }}
   </div>
   <div class="col-xs-4">
-    <label>Calories</label>{{ vm.details.calories }}
+    <label>Nutritional</label>{{ vm.details.nutritional}}
   </div>
   <div class="col-xs-8">
     <label>Ingredients</label>
