remove all columns from recipe listings except name and change page body text

--- a/modules/recipes/client/views/recipes.listing.html
+++ b/modules/recipes/client/views/recipes.listing.html
@@ -3,10 +3,9 @@
   <!---- Search for recipes ------>
   <h2>Find a delicious protein shake!</h2>
 
-  <p>Do you have a protein flavour you don't know what to make into?  Or are you looking for
-  your next flavour?</p>
+  <p>Bored with your current shake?</p>
 
-  <p>Use the following search bar to search by name, or protein flavour.</p>
+  <p>Use the following search bar to search:</p>
   <form name="search" style="margin-top:20px;" class="col-xs-12 col-md-offset-4 col-md-4">
     <fieldset class="row">
       <div class="input-group">
