--- a/modules/recipes/client/views/recipes.listing.html
+++ b/modules/recipes/client/views/recipes.listing.html
@@ -1,11 +1,15 @@
 <section class="container search recipes-container">
 
   <!---- Search for recipes ------>
-  <h2>Find a delicious protein shake!</h2>
+  <h2>Bored with your current shake?</h2>
 
-  <p>Bored with your current shake?</p>
+  <p>Find a delicious protein shake!</p>
 
-  <p>Use the following search bar to search:</p>
+  Search by: 
+  <label ng-repeat="option in vm.searchOptions">
+    <input type="checkbox" ng-model="option.checked"/> {{option.name}}
+  </label>
+
   <form name="search" style="margin-top:20px;" class="col-xs-12 col-md-offset-4 col-md-4">
     <fieldset class="row">
       <div class="input-group">
@@ -18,10 +22,24 @@
     </fieldset>
   </form>
 
+  <div>
+    Or Select a filter:
+  </div>
+  <form>
+    <label ng-repeat="option in vm.filterKeywords">
+      <input type="radio" ng-model="vm.selectedFilter" value=red/> {{option.name}}
+    </label>
+  </form>
+  selected: {{vm.selectedFilter}}
+
   <!--
   <button class="btn btn-primary" ng-click="vm.seed();">SEED</button>
   <!--- Results ---->
   <div ng-if="vm.resultsGrid.data.length > 0" class="row col-xs-12" style="margin-top:50px;text-align:center">
     <div ui-grid="vm.resultsGrid" ui-grid-selection class="myGrid"></div>
   </div>
+
+  
+
+
 </section>
