working search with nutritional information

--- a/modules/recipes/client/views/recipes.details.html
+++ b/modules/recipes/client/views/recipes.details.html
@@ -3,10 +3,7 @@
 
   <div class="row">
     <div class="col-xs-4">
-      <label>Main Protein</label>{{ vm.details.flavour }}
-    </div>
-    <div class="col-xs-4">
-      <label>Nutritional</label>{{ vm.details.nutritional}}
+      <label>Nutritional</label>{{ vm.details.fat }}
     </div>
     <div class="col-xs-8">
       <label>Ingredients</label>
