--- a/modules/core/server/views/404.server.view.html
+++ b/modules/core/server/views/404.server.view.html
@@ -5,6 +5,6 @@
 <div class="alert alert-danger" role="alert">
   <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
   <span class="sr-only">Error:</span>
-  {{url}} is not a valid path.
+  {{url}} is not a valid path.  I am watching you.
 </div>
 {{/contentFor}}
