--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>New Age - Start Bootstrap Theme</title>
+    <title>FitDrinks</title>
 
     <!-- Custom fonts for this template -->
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
@@ -24,8 +24,8 @@
         <div class="row h-100">
           <div class="col-lg-7 my-auto">
             <div class="header-content mx-auto">
-              <h1 class="mb-5">New Age is an app landing page that will help you beautifully showcase your new mobile app, or anything else!</h1>
-              <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">Start Now for Free!</a>
+              <h1 class="mb-5">FitDrinks can help you find a healthy, delicious tasting smoothie.</h1>
+              <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">Juice Me!</a>
             </div>
           </div>
           <div class="col-lg-5 my-auto">
@@ -51,12 +51,9 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 mx-auto">
-            <h2 class="section-heading">Discover what all the buzz is about!</h2>
-            <p>Our app is available on any mobile device! Download now to get started!</p>
-            <div class="badges">
-              <a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>
-              <a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a>
-            </div>
+            <h2 class="section-heading">Fat, Protein, Carbs, Oh my!</h2>
+            <p>In addition to deliciousness, find a drink that will suit your macronutritients.</p>
+            <p>Low Carb, High Protein, Low Fat, High Fat, and more!</p>
           </div>
         </div>
       </div>
@@ -65,8 +62,8 @@
     <section class="features" id="features">
       <div class="container">
         <div class="section-heading text-center">
-          <h2>Unlimited Features, Unlimited Fun</h2>
-          <p class="text-muted">Check out what you can do with this app theme!</p>
+          <h2>Tons of options!</h2>
+          <p class="text-muted">You can search by...</p>
           <hr>
         </div>
         <div class="row">
@@ -91,15 +88,15 @@
                 <div class="col-lg-6">
                   <div class="feature-item">
                     <i class="icon-screen-smartphone text-primary"></i>
-                    <h3>Device Mockups</h3>
-                    <p class="text-muted">Ready to use HTML/CSS device mockups, no Photoshop required!</p>
+                    <h3>Protein Shakes</h3>
+                    <p class="text-muted">Tired of vanilla protein powder and chocolate milk?  Find more recipes for vanilla!</p>
                   </div>
                 </div>
                 <div class="col-lg-6">
                   <div class="feature-item">
                     <i class="icon-camera text-primary"></i>
-                    <h3>Flexible Use</h3>
-                    <p class="text-muted">Put an image, video, animation, or anything else in the screen!</p>
+                    <h3>Ingredients</h3>
+                    <p class="text-muted">Do you LOVE mangos?  Find a shake that uses fresh mango.</p>
                   </div>
                 </div>
               </div>
@@ -107,15 +104,8 @@
                 <div class="col-lg-6">
                   <div class="feature-item">
                     <i class="icon-present text-primary"></i>
-                    <h3>Free to Use</h3>
-                    <p class="text-muted">As always, this theme is free to download and use for any purpose!</p>
-                  </div>
-                </div>
-                <div class="col-lg-6">
-                  <div class="feature-item">
-                    <i class="icon-lock-open text-primary"></i>
-                    <h3>Open Source</h3>
-                    <p class="text-muted">Since this theme is MIT licensed, you can use it commercially!</p>
+                    <h3>Healthy options</h3>
+                    <p class="text-muted">Limit search by low-carb, high-protein, and more!</p>
                   </div>
                 </div>
               </div>
@@ -128,7 +118,7 @@
     <section class="cta">
       <div class="cta-content">
         <div class="container">
-          <h2>Stop waiting.<br>Start building.</h2>
+          <h2>More to come!<br>Try it out.</h2>
           <a href="#contact" class="btn btn-outline btn-xl js-scroll-trigger">Let's Get Started!</a>
         </div>
       </div>
