--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -21,7 +21,7 @@
 
     <header class="masthead">
       <div class="container h-100">
-        <div class="row h-100">
+        <div class="main-header row h-100">
           <div class="col-lg-7 my-auto">
             <div class="header-content mx-auto">
               <h1 class="mb-5">FitDrinks can help you find a healthy, delicious tasting smoothie.</h1>
