--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -26,7 +26,7 @@
             <div class="header-content mx-auto">
               <h1 class="mb-5">FitDrinks can help you find a healthy, delicious tasting smoothie.</h1>
               <p>We have hundreds of recipes that include all nutritional information you might need.</p>
-              <a href="/recipes/listing" class="btn btn-outline btn-xl js-scroll-trigger">Juice Me!</a>
+              <a href="/recipes/home" class="btn btn-outline btn-xl js-scroll-trigger">Juice Me!</a>
             </div>
           </div>
           <div class="col-lg-5 my-auto">
@@ -54,7 +54,7 @@
           <div class="col-md-8 mx-auto">
             <h2 class="section-heading">Fat, Protein, Carbs, Oh my!</h2>
             <p>In addition to deliciousness, find a drink that will suit your macronutritients.</p>
-            <a href="/recipes/listing" class="btn btn-outline btn-xl js-scroll-trigger">Try it now!</a>
+            <a href="/recipes/home" class="btn btn-outline btn-xl js-scroll-trigger">Try it now!</a>
           </div>
         </div>
       </div>
