--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -1,4 +1,4 @@
-<!-- <div class="container" ng-controller="HeaderController as vm">
+<div class="container" ng-controller="HeaderController as vm">
   <div class="navbar-header">
     <button class="navbar-toggle" type="button" ng-click="vm.isCollapsed = !vm.isCollapsed">
       <span class="sr-only">Toggle navigation</span>
@@ -21,7 +21,7 @@
       </li>
     </ul>
   </nav>
-</div> -->
+</div>
 
 <!-- Navigation -->
 <!-- <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
