--- a/modules/recipes/client/views/recipes.carbs.html
+++ b/modules/recipes/client/views/recipes.carbs.html
@@ -1,6 +1,23 @@
-<section class="container">
+<section class="container recipes">
 
-  <h2>Carbs</h2>
-  <button ng-click="vm.loadNextStep()">next</button>
+  <section class="recipes-body fade-in" ng-if="!vm.visible">
+    <p class="text-align-center">Do you want to add a <b>carb</b> filter?</p>
+    <div class="center">
+      <a ng-click="vm.visible = true" class="btn btn-outline btn-xl js-scroll-trigger">Yes</a>
+      <a href="/recipes/listing" class="btn btn-outline btn-xl js-scroll-trigger">No</a>
+    </div>
+  </section>
+
+  <!-- Carbs -->
+  <div ng-if="vm.visible" class="col-xs-12">
+    <h3 class="text-align-center bold">Carbs</h3>
+    <div class="row col-xs-12 gram-input">
+      <p>More than </p> <input type="number" placeholder="grams of carbs">
+    </div>
+    <div class="row col-xs-12 gram-input">
+      <p>Less than </p> <input type="number" placeholder="grams of carbs">
+    </div>
+    <div class=center><a href="/recipes/listing" class="btn btn-outline btn-xl js-scroll-trigger">Next</a></div>
+  </div>
 
 </section>
