--- a/modules/recipes/client/views/recipes.listing.html
+++ b/modules/recipes/client/views/recipes.listing.html
@@ -1,55 +1,5 @@
-<section class="container search recipes-container">
-
-  <!---- Search for recipes ------>
-  <h2>Bored with your current shake?</h2>
-
-  <div class="row col-xs-12">
-    <form>
-        <label>Low Calorie:
-          <input type="checkbox" ng-model="vm.searchOptions.lowCal">
-        </label><br/>
-        <label>Low Carb:
-          <input type="checkbox" ng-model="vm.searchOptions.lowCarb">
-        </label><br/>
-        <label>High Protein:
-          <input type="checkbox" ng-model="vm.searchOptions.highProtein">
-        </label><br/>
-        <label>High Fat:
-          <input type="checkbox" ng-model="vm.searchOptions.highFat">
-        </label><br/>    
-        <label>Low Fat:
-          <input type="checkbox" ng-model="vm.searchOptions.lowFat">
-        </label><br/>
-    </form>
-  </div>
-
-  <form name="search" style="margin-top:20px;" class="col-xs-12">
-    <fieldset class="row">
-      <div class="input-group">
-        <input autocomplete="off" id="searchText" name="searchText" class="form-control"
-               ng-model="vm.searchText" placeholder="search by name or ingredients" autofocus>
-        <span class="input-group-btn">
-          <button class="btn btn-primary" ng-click="vm.search();">Search</button>
-        </span>
-      </div>
-    </fieldset>
-  </form>
+<section class="container recipes recipes-container">
 
   <!--- Results ---->
-  <div  class="row col-xs-12" style="margin-top:50px;text-align:center">
-    Show columns
-    <input type="checkbox" ng-model="vm.columnMap.name.visibility" ng-change="vm.toggleVisibleRow('name')"> <b>name</b>
-    <input type="checkbox" ng-model="vm.columnMap.calories.visibility" ng-change="vm.toggleVisibleRow('calories')"> <b>calories</b>
-    <input type="checkbox" ng-model="vm.columnMap.macros.visibility" ng-change="vm.toggleVisibleRow('macros')"> <b>macronutritients</b>
-
-    <div class=row>
-      <div ui-grid="vm.resultsGrid" ui-grid-selection class="myGrid"></div>
-    </div>
-  </div>
-
-<!--
-  <button class="btn btn-primary" ng-click="vm.seed();">SEED</button>
-  
-
 
 </section>
