--- a/modules/recipes/client/views/recipes.html
+++ b/modules/recipes/client/views/recipes.html
@@ -14,7 +14,7 @@
   <div ng-if="vm.visible" class="col-xs-12">
     <h3 class="text-align-center">Includes These Ingredients</h3>
     <div class="row col-xs-12 gram-input">
-      <input ng-model="vm.filters." type="text" placeholder="Seperate by space">
+      <input ng-model="vm.filters.ingredients" type="text" placeholder="Seperate by space">
     </div>
     <div class="gram-submit center"><a href="/recipes/protein" class="btn btn-outline btn-xl js-scroll-trigger">Next</a></div>
     <br><br>
