--- a/modules/core/server/views/layout.server.view.html
+++ b/modules/core/server/views/layout.server.view.html
@@ -17,6 +17,8 @@
     gtag('config', 'UA-96989482-3');
   </script>
 
+  <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.10/lodash.min.js"></script>
+
 
   <!-- Apple META -->
   <meta name="apple-mobile-web-app-capable" content="yes">
