change stages to show the options when the filters are entered

--- a/modules/recipes/client/css/recipes.css
+++ b/modules/recipes/client/css/recipes.css
@@ -149,3 +149,8 @@ section.container.recipes .recipe-result {
 section.container.recipes .recipe-result:hover {
 	background-color: wheat;
 }
+
+.main.btn.btn-outline.btn-xl {
+	background-color: white;
+	color: #fdcc52;
+}
