--- a/modules/recipes/client/views/recipes.details.html
+++ b/modules/recipes/client/views/recipes.details.html
@@ -3,7 +3,7 @@
   
   <br>
 
-  <div class="col-xs-12 col md-6">
+  <div class="col-xs-12 col-md-6">
     <label>Nutritional</label>
     <ul>
       <li>Calories: {{ vm.details.calories }}</li>
@@ -20,6 +20,8 @@
     </ul>
   </div>
 
-  <a ng-click="$back()" class="pull-right btn btn-outline btn-xl js-scroll-trigger">Back</a>
+  <div class="row col-xs-12">
+    <a ng-click="$back()" style="margin-top:50px" class="main btn btn-outline btn-xl js-scroll-trigger">Back</a>
+  </div>
 
 </section>
