--- a/modules/recipes/client/views/recipes.html
+++ b/modules/recipes/client/views/recipes.html
@@ -12,13 +12,13 @@
   </section>
 
   <div ng-if="vm.visible" class="col-xs-12">
-    <h3 class="text-align-center">Includes These Ingredients</h3>
+    <h3 class="text-align-center">Includes this ingredient:</h3>
     <div class="row col-xs-12 gram-input">
-      <input ng-model="vm.filters.ingredients" type="text" placeholder="Seperate by space">
+      <input ng-model="vm.filters.ingredients" type="text" placeholder="">
     </div>
     <div class="gram-submit center"><a href="/recipes/protein" class="btn btn-outline btn-xl js-scroll-trigger">Next</a></div>
     <br><br>
-    <p style="font-size: 12px">tip: Please keep your keywords simple, ie: "vanilla" instead of "vanilla protein powder", or "mango" instead of "mangoes" </p>
+    <p class="text-center" style="font-size: 12px">tip: Please keep your keywords simple, ie: "vanilla" instead of "vanilla protein powder", or "mango" instead of "mangoes" </p>
   </div>
 
 </section>
