--- a/modules/recipes/client/views/recipes.listing.html
+++ b/modules/recipes/client/views/recipes.listing.html
@@ -8,8 +8,8 @@
 
   <div class="recipes-listing-buttons center">
     <p ng-if="vm.results.length>5">(5) results limit</p>
+    <a href="/recipes/home" class="main btn btn-outline btn-xl js-scroll-trigger">Edit Existing</a>
     <a ng-click="vm.startOver()" class="btn btn-outline btn-xl js-scroll-trigger">Start Over</a>
-    <a href="/recipes/home" class="btn btn-outline btn-xl js-scroll-trigger">Edit Existing</a>
   </div>
 
 </section>
