--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -54,6 +54,7 @@
           <div class="col-md-8 mx-auto">
             <h2 class="section-heading">Fat, Protein, Carbs, Oh my!</h2>
             <p>In addition to deliciousness, find a drink that will suit your macronutritients.</p>
+            <p>You can search using specific fat, protein, and carb values to make sure you get the exact recipe you are looking for.</p>
             <a href="/recipes/home" class="btn btn-outline btn-xl js-scroll-trigger">Try it now!</a>
           </div>
         </div>
@@ -120,13 +121,13 @@
       <div class="cta-content">
         <div class="container">
           <h2>More to come!<br>Try it out.</h2>
-          <a href="#contact" class="btn btn-outline btn-xl js-scroll-trigger">Let's Get Started!</a>
+          <a href="/recipes/home" class="btn btn-outline btn-xl js-scroll-trigger">Let's Get Started!</a>
         </div>
       </div>
       <div class="overlay"></div>
     </section>
 
-    <section class="contact bg-primary" id="contact">
+    <!-- <section class="contact bg-primary" id="contact">
       <div class="container">
         <h2>We
           <i class="fa fa-heart"></i>
@@ -149,22 +150,11 @@
           </li>
         </ul>
       </div>
-    </section>
+    </section> -->
 
     <footer>
       <div class="container">
-        <p>&copy; Your Website 2018. All Rights Reserved.</p>
-        <ul class="list-inline">
-          <li class="list-inline-item">
-            <a href="#">Privacy</a>
-          </li>
-          <li class="list-inline-item">
-            <a href="#">Terms</a>
-          </li>
-          <li class="list-inline-item">
-            <a href="#">FAQ</a>
-          </li>
-        </ul>
+        <p>&copy; fitdrinks.ca - All Rights Reserved.</p>
       </div>
     </footer>
 
