add contact section

--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -118,9 +118,12 @@
 
     <section class="cta">
       <div class="cta-content">
-        <div class="container">
-          <h2>More to come!<br>Try it out.</h2>
-          <a href="/recipes/home" class="btn btn-outline btn-xl js-scroll-trigger">Let's Get Started!</a>
+        <div class="container contact">
+          <h2>Contact Me<br></h2>
+          <p>Do you have any comments, feedback, criticism, or just want to start a conversation?  I would love to hear from you.
+            Email me at
+            <a href="mailto:sedkya@outlook.com?Subject=Fit%20Drinks">sedkya@outlook.com</a>
+          </p>
         </div>
       </div>
       <div class="overlay"></div>
