more styling changes for new bg

--- a/modules/recipes/client/views/recipes.listing.html
+++ b/modules/recipes/client/views/recipes.listing.html
@@ -19,7 +19,7 @@
       <option value="asc">Ascending</option>
     </select>
 
-    <button style="background-color: white; margin-left:30px; width: 100px" ng-click="vm.sortResults()">Sort</button>
+    <button style="background-color: white; margin-left:30px; width: 100px; color: black" ng-click="vm.sortResults()">Sort</button>
   </div>
 
   <div ng-click="vm.loadDetails(recipe)" class="recipe-result" ng-repeat="recipe in vm.results | limitTo: 5">
