--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -18,7 +18,7 @@
   </head>
 
   <body id="page-top">
-
+    <!-- Home -->
     <header class="masthead">
       <div class="container h-100">
         <div class="main-header row h-100">
@@ -34,7 +34,6 @@
               <div class="device-mockup iphone6_plus portrait white">
                 <div class="device">
                   <div class="screen">
-                    <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
                     <img src="/modules/core/client/img/smoothie_2.png" class="img-fluid" alt="">
                   </div>
                   <div class="button">
@@ -46,63 +45,33 @@
         </div>
       </div>
     </header>
-
-    <section class="download bg-primary text-center" id="download">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-8 mx-auto">
-            <h2 class="section-heading">Fat, Protein, Carbs, Oh my!</h2>
-            <p>In addition to deliciousness, find a drink that will suit your macronutritients.</p>
-            <p>You can search using specific fat, protein, and carb values to make sure you get the exact recipe you are looking for.</p>
-            <a href="/recipes/home" class="btn btn-outline btn-xl js-scroll-trigger">Try it now!</a>
-          </div>
-        </div>
-      </div>
-    </section>
-
+    <!-- Features -->
     <section class="features" id="features">
-      <div class="container">
+      <div class="container options">
         <div class="section-heading text-center">
-          <h2>Tons of options!</h2>
-          <p class="text-muted">You can search by...</p>
+          <h2>Tons of options to search by!</h2>
+          <p class="text-muted">You can customize your searches to get exactly what you want.</p>
           <hr>
         </div>
         <div class="row">
-          <div class="col-lg-4 my-auto">
-            <div class="device-container">
-              <div class="device-mockup iphone6_plus portrait white">
-                <div class="device">
-                  <div class="screen">
-                    <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                    <img src="img/demo-screen-1.jpg" class="img-fluid" alt="">
-                  </div>
-                  <div class="button">
-                    <!-- You can hook the "home button" to some JavaScript events or just remove it -->
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-8 my-auto">
+          <div class="col-lg-12 my-auto">
             <div class="container-fluid">
               <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-4">
                   <div class="feature-item">
                     <i class="icon-screen-smartphone text-primary"></i>
                     <h3>Protein Shakes</h3>
                     <p class="text-muted">Tired of vanilla protein powder and chocolate milk?  Find more recipes for vanilla!</p>
                   </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-4">
                   <div class="feature-item">
                     <i class="icon-camera text-primary"></i>
                     <h3>Ingredients</h3>
                     <p class="text-muted">Do you LOVE mangos?  Find a shake that uses fresh mango.</p>
                   </div>
                 </div>
-              </div>
-              <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-4">
                   <div class="feature-item">
                     <i class="icon-present text-primary"></i>
                     <h3>Healthy options</h3>
@@ -115,12 +84,15 @@
         </div>
       </div>
     </section>
-
+    <!-- Contact -->
     <section class="cta">
       <div class="cta-content">
         <div class="container contact">
           <h2>Contact Me<br></h2>
           <p>Do you have any comments, feedback, criticism, or just want to start a conversation?  I would love to hear from you.
+          </p>
+          <br><br>
+          <p>
             Email me at
             <a href="mailto:sedkya@outlook.com?Subject=Fit%20Drinks">sedkya@outlook.com</a>
           </p>
