--- a/modules/recipes/client/css/recipes.css
+++ b/modules/recipes/client/css/recipes.css
@@ -39,10 +39,11 @@ div.ingredients-div p {
 	margin-bottom: 0px;
 }
 section.container.recipes {
-	background-color: #fdcc52;
+	background: url('../img/bg-pattern.png'), linear-gradient(to left, #7b4397, #dc2430);
 	height: 100%;
 	min-height: 100vh;
 	width: 100vw;
+	color: white;
 }
 .text-align-center {
 	text-align:center;
@@ -105,6 +106,9 @@ div.center {
 .gram-input {
 	text-align: center;
 }
+.gram-input input {
+	color: black;
+}
 .gram-input p {
 	display: inline-block;
 }
@@ -112,6 +116,7 @@ div.center {
 	width: 100%;
 	max-width: 250px;
 	min-width: 150px;	
+	color: black;
 }
 
 .gram-submit {
@@ -157,4 +162,13 @@ section.container.recipes .recipe-result:hover {
 
 #sort-options select {
 	background-color: white;
+	color: black;
+}
+
+section.features{
+	background-color: #fdcc52;
+}
+
+section.features div.section-heading {
+	margin-bottom: 0px;
 }
